# Umi

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
dep/: CMakeLists.txt  mongocxx.old.patch  mongocxx.patch
samples/client/dep/: CMakeLists.txt
samples/client/resources/: sample.vs
samples/client/src/: CMakeLists.txt  gl_safe.hpp  main.cpp
samples/client/src/gx/camera/: camera.cpp  camera.hpp
samples/client/src/gx/mesh/: mesh.cpp  mesh.hpp
samples/client/src/gx/shader/: program.cpp  program.hpp
samples/client/src/gx/transform/: transform.hpp
samples/server/: CMakeLists.txt
samples/server/data/kumo/: client_config.json  config.json  handshake.kumo  login.kumo  movement.kumo  queues.kumo  spawn.kumo  utils.kumo
samples/server/dep/: CMakeLists.txt
samples/server/src/: CMakeLists.txt  main.cpp
samples/server/src/common/: definitions.hpp
samples/server/src/core/: client.cpp  client.hpp  handler.cpp  handler.hpp  server.cpp  server.hpp
samples/server/src/cx/: math.hpp
samples/server/src/database/: database.hpp  transaction.cpp  transaction.hpp
samples/server/src/entities/: map_aware.cpp  map_aware.hpp  transform.cpp  transform.hpp
samples/server/src/kaminari/: broadcaster.hpp  protocol.cpp  protocol.hpp  super_packet.cpp  super_packet.hpp  super_packet_reader.cpp  super_packet_reader.hpp
samples/server/src/kaminari/buffers/: packet.cpp  packet.hpp  packet_reader.cpp  packet_reader.hpp
samples/server/src/kaminari/client/: basic_client.cpp  basic_client.hpp  client.hpp
samples/server/src/kaminari/cx/: maths.hpp  overflow.hpp
samples/server/src/kaminari/detail/: detail.hpp
samples/server/src/kaminari/packers/: immediate_packer.hpp  merge_packer.hpp  most_recent_packer_by_opcode.hpp  most_recent_packer_with_id.hpp  ordered_packer.hpp  packer.hpp  unique_merge_packer.hpp
samples/server/src/kaminari/protocol/: basic_protocol.cpp  basic_protocol.hpp  protocol.hpp
samples/server/src/kaminari/queues/: eventually_synced_queue.hpp  queue.hpp  reliable_queue.hpp  unreliable_queue.hpp
samples/server/src/kumo/: config.hpp  marshal.cpp  marshal.hpp  opcodes.hpp  protocol_queues.cpp  protocol_queues.hpp  rpc.cpp  rpc.hpp  rpc_detail.cpp  rpc_detail.hpp  structs.hpp
samples/server/src/maps/: cell.cpp  cell.hpp  map.cpp  map.hpp  offset.hpp  region.cpp  region.hpp
samples/server/test/dep/: CMakeLists.txt
samples/server/test/src/: CMakeLists.txt  test_database_collisions.cpp
src/: CMakeLists.txt
src/async/: async_executor.cpp  async_executor.hpp
src/containers/: concepts.hpp  dictionary.hpp  pool_item.hpp  pooled_static_vector.hpp  static_store.hpp  store.hpp  thread_local_tasks.cpp  thread_local_tasks.hpp  ticket.hpp  unsafe_ticket_ref.hpp
src/containers/concepts/: constructable.hpp  destroyable.hpp  entity_destroyable.hpp  has_scheme_created.hpp  has_scheme_information.hpp  has_sync.hpp  has_update.hpp  method_traits.hpp
src/containers/storage/: growable_storage.hpp  partitioned_growable_storage.hpp  partitioned_static_storage.hpp  static_growable_storage.hpp  static_storage.hpp  storage.hpp
src/database/: database.cpp  database.hpp  pseudorandom_unique_id.cpp  pseudorandom_unique_id.hpp  transaction.cpp  transaction.hpp
src/entity/: components_map.hpp  dynamic_content.hpp  entity.hpp  scheme.hpp  scheme_entities_map.hpp
src/fiber/: exclusive_work_stealing.hpp  exclusive_work_stealing_impl.hpp
src/ids/: generator.hpp
src/pools/: plain_pool.hpp  thread_local_pool.hpp
src/storage/: growable_storage.hpp  partitioned_growable_storage.hpp  partitioned_static_storage.hpp  static_growable_storage.hpp  static_storage.hpp  storage.hpp
src/traits/: base_dic.hpp  ctti.hpp
src/updater/: executor.hpp  executor_registry.hpp  tasks_manager.hpp  updater.hpp  updater_all_async.hpp  updater_batched.hpp  updater_contiguous.hpp
src/view/: scheme_view.hpp  view.hpp
test/dep/: CMakeLists.txt
test/src/: CMakeLists.txt  test_all_storages.cpp  test_growable_storage.cpp  test_orchestrator_moves.cpp  test_partitioned_growable_storage.cpp  test_partitioned_static_storage.cpp  test_scheme.cpp  test_scheme_view.cpp  test_static_growable_storage.cpp  test_static_storage.cpp
